[package]
name = "tester"
version = "0.3.1"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"

[dependencies]
libc = "^0.2"
structopt = "^0.2"
serde_json = "1.0.39"
serde = { version = "1.0.90", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
nix = "^0.13"

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3", features = ["std", "psapi"] }
